--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -2,78 +2,129 @@
 {% load static %}
 
 {% block page-content %}
-   <div class="main-inner">
-   <div class="content-wrap">
-    <div id="content" class="content">
-     <div id="posts" class="posts-expand">
-      <article class="post post-type-normal" itemscope="" style="opacity: 1; display: block; transform: translateY(0px);">
-       <header class="post-header">
-        <h2 class="post-title" itemprop="name headline"> {{ article.title }} </h2>
-        <div class="post-meta">
-         <span class="post-time"> <span class="post-meta-item-icon"> <i class="fa fa-calendar-o"></i> </span> <span class="post-meta-item-text">发表于</span> <time title="Post created" itemprop="dateCreated datePublished" datetime="{{ article.created_time }}"> {{ article.created_time }} </time> </span>
-         <span class="post-category"> <span class="post-meta-divider">|</span> <span class="post-meta-item-icon"> <i class="fa fa-folder-o"></i> </span> <span class="post-meta-item-text">分类于</span> <span itemprop="about" itemscope=""> <a href="#" itemprop="url" rel="index"> <span itemprop="name">{{ article.category }}</span> </a> </span> </span>
-         <span class="leancloud_visitors"> <span class="post-meta-divider">|</span> <span class="post-meta-item-icon"> <i class="fa fa-eye"></i> </span> <span class="post-meta-item-text">热度 </span> <span class="leancloud-visitors-count">{{ article.views }}</span> <span>℃</span> </span>
-         <div class="post-wordcount">
-          <span class="post-meta-item-icon"> <i class="fa fa-file-word-o"></i> </span>
-          <span class="post-meta-item-text">字数统计</span>
-          <span title="字数统计"> {{ article.words }} </span>
-         </div>
+    <div class="content-wrap">
+        <div id="content" class="content">
+            <div id="posts" class="posts-expand">
+                <article class="post post-type-normal"
+                         style="opacity: 1; display: block; transform: translateY(0px);">
+                    <header class="post-header">
+                        <h2 class="post-title"
+                        > {{ article.title }} </h2>
+                        <div class="post-meta">
+                        <span class="post-time"> <span
+                                class="post-meta-item-icon"> <i
+                                class="fa fa-calendar-o"></i> </span> <span
+                                class="post-meta-item-text">发表于</span> <time
+                                title="Post created"
+                                datetime="{{ article.created_time }}"> {{ article.created_time }} </time> </span>
+                            <span class="post-category"> <span
+                                    class="post-meta-divider">|</span> <span
+                                    class="post-meta-item-icon"> <i
+                                    class="fa fa-folder-o"></i> </span> <span
+                                    class="post-meta-item-text">分类于</span> <span> <a
+                                    href="#"
+                                    rel="index"> <span>{{ article.category }}</span> </a> </span> </span>
+                            <span class="leancloud_visitors"> <span
+                                    class="post-meta-divider">|</span> <span
+                                    class="post-meta-item-icon"> <i
+                                    class="fa fa-eye"></i> </span> <span
+                                    class="post-meta-item-text">热度 </span> <span
+                                    class="leancloud-visitors-count">{{ article.views }}</span> <span>℃</span> </span>
+                            <div class="post-wordcount">
+                            <span class="post-meta-item-icon"> <i
+                                    class="fa fa-file-word-o"></i> </span>
+                                <span class="post-meta-item-text">字数统计</span>
+                                <span title="字数统计"> {{ article.words }} </span>
+                            </div>
+                        </div>
+                    </header>
+                    <div class="markdown-body">
+                        {{ article.body | safe }}
+                    </div>
+                    <div>
+                    </div>
+                    <div class="post-tags">
+                        {% for tag in tags %}
+                            <a href="#" rel="tag"># {{ tag.name }}</a>
+                        {% endfor %}
+                    </div>
+                    <footer class="post-footer">
+                        <div>
+                            <ul class="post-copyright">
+                                <li class="post-copyright-link">
+                                    <strong>本文作者：</strong> <a
+                                        href="{% url 'app:index' %}">{{ article.author }}</a>
+                                </li>
+                                <li class="post-copyright-link">
+                                    <strong>本文标题：</strong> <a
+                                        href="{% url 'app:detail' article.pk %}">{{ article.title }}</a>
+                                </li>
+                                <li class="post-copyright-link">
+                                    <strong>本文链接：</strong> <a
+                                        href="{% url 'app:detail' article.pk %}">{{ article.get_absolute_url }}</a>
+                                </li>
+                                <li class="post-copyright-date">
+                                    <strong>发布时间：</strong>{{ article.created_time }}
+                                </li>
+                                <li class="post-copyright-license">
+                                    <strong>版权声明： </strong>
+                                    本文由 {{ article.author }}
+                                    原创，转载请保留以上声明信息！
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="post-nav">
+                            <div class="post-nav-next post-nav-item">
+                                <a href="#" rel="next"> <i
+                                        class="fa fa-chevron-left"></i>
+                                    MySQL常用参数列表
+                                </a>
+                            </div>
+                            <span class="post-nav-divider"></span>
+                            <div class="post-nav-prev post-nav-item">
+                            </div>
+                        </div>
+                    </footer>
+                </article>
+            </div>
         </div>
-       </header>
-       <div class="markdown-body" itemprop="articleBody">
-        {{ article.body | safe }}
-       </div>
-       <div>
-       </div>
-       <div class="post-tags">
-           {% for tag in tags %}
-            <a href="#" rel="tag"># {{tag.name }}</a>
-           {% endfor %}
-       </div>
-       <footer class="post-footer">
-        <div>
-         <ul class="post-copyright">
-          <li class="post-copyright-link"> <strong>本文作者：</strong> <a href="{% url 'app:index' %}">{{ article.author }}</a> </li>
-          <li class="post-copyright-link"> <strong>本文标题：</strong> <a href="{% url 'app:detail' article.pk %}">{{ article.title }}</a> </li>
-          <li class="post-copyright-link"> <strong>本文链接：</strong> <a href="{% url 'app:detail' article.pk %}">{{ article.get_absolute_url }}</a> </li>
-          <li class="post-copyright-date"> <strong>发布时间：</strong>{{ article.created_time }}</li>
-          <li class="post-copyright-license"> <strong>版权声明： </strong> 本文由 {{ article.author }} 原创，转载请保留以上声明信息！ </li>
-         </ul>
-        </div>
-        <div class="post-nav">
-         <div class="post-nav-next post-nav-item">
-          <a href="https://www.ezlippi.com/blog/2018/04/mysql-settings.html" rel="next"> <i class="fa fa-chevron-left"></i> MySQL常用参数列表 </a>
-         </div>
-         <span class="post-nav-divider"></span>
-         <div class="post-nav-prev post-nav-item">
-         </div>
-        </div>
-       </footer>
-      </article>
-     </div>
-  </div>
+    </div>
 {% endblock %}
 
 {% block blog_index_nav %}
-    <ul class="sidebar-nav motion-element" style="opacity: 1; display: block; transform: translateX(0px);">
-      <li class="sidebar-nav-toc" data-target="post-toc-wrap"> 文章目录 </li>
-      <li class="sidebar-nav-overview sidebar-nav-active" data-target="site-overview"> 站点概览 </li>
-     </ul>
+    <ul class="sidebar-nav motion-element"
+        style="opacity: 1; display: block; transform: translateX(0px);">
+        <li class="sidebar-nav-toc" data-target="post-toc-wrap"> 文章目录</li>
+        <li class="sidebar-nav-overview sidebar-nav-active"
+            data-target="site-overview"> 站点概览
+        </li>
+    </ul>
 {% endblock %}
 
 
 {% block blog_index_content %}
     <!--noindex-->
-     <section class="post-toc-wrap motion-element sidebar-panel" style="opacity: 1; display: block; transform: translateX(0px);">
-      <div class="post-toc" style="max-height: 849px; width: calc(100% + 17px);">
-       <div class="post-toc-content">
-        <ol class="nav">
-         <li class="nav-item nav-level-2"><a class="nav-link" href="https://www.ezlippi.com/blog/2018/04/elasticsearch-translog.html#%E6%95%B0%E6%8D%AE%E6%8C%81%E4%B9%85%E5%8C%96"><span class="nav-number">1.</span> <span class="nav-text">数据持久化</span></a></li>
-         <li class="nav-item nav-level-2"><a class="nav-link" href="https://www.ezlippi.com/blog/2018/04/elasticsearch-translog.html#refresh%E6%93%8D%E4%BD%9C"><span class="nav-number">2.</span> <span class="nav-text">refresh操作</span></a></li>
-         <li class="nav-item nav-level-2"><a class="nav-link" href="https://www.ezlippi.com/blog/2018/04/elasticsearch-translog.html#flush%E6%93%8D%E4%BD%9C"><span class="nav-number">3.</span> <span class="nav-text">flush操作</span></a></li>
-        </ol>
-       </div>
-      </div>
-     </section>
-     <!--/noindex-->
+    <section class="post-toc-wrap motion-element sidebar-panel"
+             style="opacity: 1; display: block; transform: translateX(0px);">
+        <div class="post-toc"
+             style="max-height: 849px; width: calc(100% + 17px);">
+            <div class="post-toc-content">
+                <ol class="nav">
+                    <li class="nav-item nav-level-2"><a class="nav-link"
+                                                        href="#"><span
+                            class="nav-number">1.</span> <span class="nav-text">数据持久化</span></a>
+                    </li>
+                    <li class="nav-item nav-level-2"><a class="nav-link"
+                                                        href="#"><span
+                            class="nav-number">2.</span> <span class="nav-text">refresh操作</span></a>
+                    </li>
+                    <li class="nav-item nav-level-2"><a class="nav-link"
+                                                        href="#"><span
+                            class="nav-number">3.</span> <span class="nav-text">flush操作</span></a>
+                    </li>
+                </ol>
+            </div>
+        </div>
+    </section>
+    <!--/noindex-->
 {% endblock %}
