--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,48 +2,71 @@
 {% load static %}
 
 
-    {% block page-content %}
+{% block page-content %}
     <div class="content-wrap">
-      <div id="content" class="content">
-       <section id="posts" class="posts-expand">
-        {% load paginate_tags %}
-        {% paginate article_list %}
-        {% for article in article_list %}
-		<article class="post post-type-normal" itemscope="" style="opacity: 1; display: block; transform: translateY(0px);">
-         <header class="post-header">
-          <h2 class="post-title" itemprop="name headline"> <a class="post-title-link" href="{% url 'app:detail' article.pk %}" itemprop="url"> {{ article.title }} </a> </h2>
-          <div class="post-meta">
-           <span class="post-time"> <span class="post-meta-item-icon"> <i class="fa fa-calendar-o"></i> </span> <span class="post-meta-item-text">发表于</span> <time title="Post created" itemprop="dateCreated datePublished" datetime="{{ article.created_time }}"> {{ article.created_time}} </time> </span>
-           <span class="post-category"> <span class="post-meta-divider">|</span> <span class="post-meta-item-icon"> <i class="fa fa-folder-o"></i> </span> <span class="post-meta-item-text">分类于</span> <span itemprop="about" itemscope="" itemtype="http://schema.org/Thing"> <a href="#" itemprop="url" rel="index"> <span itemprop="name">{{ article.category }}</span> </a> </span> </span>
-           <span class="leancloud_visitors"> <span class="post-meta-divider">|</span> <span class="post-meta-item-icon"> <i class="fa fa-eye"></i> </span> <span class="post-meta-item-text">热度 </span> <span class="leancloud-visitors-count">{{ article.views }}</span> <span>℃</span> </span>
-           <div class="post-wordcount">
-            <span class="post-meta-item-icon"> <i class="fa fa-file-word-o"></i> </span>
-            <span class="post-meta-item-text">字数统计</span>
-            <span title="字数统计"> {{ article.words }} </span>
-           </div>
-          </div>
-         </header>
-         <div class="post-body" itemprop="articleBody">
-          <p>{{ article.abstract | safe }}</p>
-          <!--noindex-->
-          <div class="post-button text-center">
-           <a class="btn" href="{% url 'app:detail' article.pk %}" rel="contents"> 阅读全文 &raquo; </a>
-          </div>
-          <!--/noindex-->
-         </div>
-         <div>
-         </div>
-         <div>
-         </div>
-         <footer class="post-footer">
-          <div>
-          </div>
-          <div class="post-eof"></div>
-         </footer>
-        </article>
-		{% endfor %}
-       </section>
-      {% include 'blog/pagination.html' %}
-      </div>
-     </div>
-    {% endblock %}
+        <div id="content" class="content">
+            <section id="posts" class="posts-expand">
+                {% load paginate_tags %}
+                {% paginate article_list %}
+                {% for article in article_list %}
+                    <article class="post post-type-normal"
+                             style="opacity: 1; display: block; transform: translateY(0px);">
+                        <header class="post-header">
+                            <h2 class="post-title"><a
+                                    class="post-title-link"
+                                    href="{% url 'app:detail' article.pk %}"> {{ article.title }} </a>
+                            </h2>
+                            <div class="post-meta">
+                                <span class="post-time"> <span
+                                        class="post-meta-item-icon"> <i
+                                        class="fa fa-calendar-o"></i> </span> <span
+                                        class="post-meta-item-text">发表于</span> <time
+                                        title="Post created"
+                                        datetime="{{ article.created_time }}"> {{ article.created_time }} </time> </span>
+                                <span class="post-category"> <span
+                                        class="post-meta-divider">|</span> <span
+                                        class="post-meta-item-icon"> <i
+                                        class="fa fa-folder-o"></i> </span> <span
+                                        class="post-meta-item-text">分类于</span> <span> <a
+                                        href="#"
+                                        rel="index"> <span>{{ article.category }}</span> </a> </span> </span>
+                                <span class="leancloud_visitors"> <span
+                                        class="post-meta-divider">|</span> <span
+                                        class="post-meta-item-icon"> <i
+                                        class="fa fa-eye"></i> </span> <span
+                                        class="post-meta-item-text">热度 </span> <span
+                                        class="leancloud-visitors-count">{{ article.views }}</span> <span>℃</span> </span>
+                                <div class="post-wordcount">
+                                    <span class="post-meta-item-icon"> <i
+                                            class="fa fa-file-word-o"></i> </span>
+                                    <span class="post-meta-item-text">字数统计</span>
+                                    <span title="字数统计"> {{ article.words }} </span>
+                                </div>
+                            </div>
+                        </header>
+                        <div class="post-body">
+                            <p>{{ article.abstract | safe }}</p>
+                            <!--noindex-->
+                            <div class="post-button text-center">
+                                <a class="btn"
+                                   href="{% url 'app:detail' article.pk %}"
+                                   rel="contents"> 阅读全文 &raquo; </a>
+                            </div>
+                            <!--/noindex-->
+                        </div>
+                        <div>
+                        </div>
+                        <div>
+                        </div>
+                        <footer class="post-footer">
+                            <div>
+                            </div>
+                            <div class="post-eof"></div>
+                        </footer>
+                    </article>
+                {% endfor %}
+            </section>
+            {% include 'blog/units/pagination.html' %}
+        </div>
+    </div>
+{% endblock %}
