--- a/blog/templates/blog/tags.html
+++ b/blog/templates/blog/tags.html
@@ -2,31 +2,34 @@
 {% load static %}
 
 {% block page-content %}
-  <div class="main-inner">
-   <div class="content-wrap">
-    <div id="content" class="content">
-     <div id="posts" class="posts-expand">
-      <header class="post-header">
-       <h2 class="post-title">Tagcloud</h2>
-      </header>
-      <div class="tag-cloud">
-       <div class="tag-cloud-title">
-         目前共计 {{ tag_list|length }} 个标签
-       </div>
-       <div class="tag-cloud-tags">
-        {% for tag in tag_list %}
-            {% if tag.count > 0 and tag.count <= 5 %}
-                <a href="#" style="font-size: 12px; color: #ccc">{{ tag.name }}</a>
-                {% elif tag.count >= 5 and tag.count <= 20 %}
-                <a href="#" style="font-size: 14.25px; color: #b5b5b5">{{ tag.name }}</a>
-                {% elif tag.count > 20 %}
-                <a href="#" style="font-size: 18.75px; color: #868686">{{ tag.name }}</a>
-            {% endif %}
-        {% endfor %}
-       </div>
-      </div>
-     </div>
+    <div class="main-inner">
+        <div class="content-wrap">
+            <div id="content" class="content">
+                <div id="posts" class="posts-expand">
+                    <header class="post-header">
+                        <h2 class="post-title">Tagcloud</h2>
+                    </header>
+                    <div class="tag-cloud">
+                        <div class="tag-cloud-title">
+                            目前共计 {{ tag_list|length }} 个标签
+                        </div>
+                        <div class="tag-cloud-tags">
+                            {% for tag in tag_list %}
+                                {% if tag.count > 0 and tag.count <= 5 %}
+                                    <a href="#"
+                                       style="font-size: 12px; color: #ccc">{{ tag.name }}</a>
+                                {% elif tag.count >= 5 and tag.count <= 20 %}
+                                    <a href="#"
+                                       style="font-size: 14.25px; color: #b5b5b5">{{ tag.name }}</a>
+                                {% elif tag.count > 20 %}
+                                    <a href="#"
+                                       style="font-size: 18.75px; color: #868686">{{ tag.name }}</a>
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-   </div>
-  </div>
 {% endblock %}
