--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -91,40 +91,6 @@
     </div>
 {% endblock %}
 
-{% block blog_index_nav %}
-    <ul class="sidebar-nav motion-element"
-        style="opacity: 1; display: block; transform: translateX(0px);">
-        <li class="sidebar-nav-toc" data-target="post-toc-wrap"> 文章目录</li>
-        <li class="sidebar-nav-overview sidebar-nav-active"
-            data-target="site-overview"> 站点概览
-        </li>
-    </ul>
-{% endblock %}
-
-
-{% block blog_index_content %}
-    <!--noindex-->
-    <section class="post-toc-wrap motion-element sidebar-panel"
-             style="opacity: 1; display: block; transform: translateX(0px);">
-        <div class="post-toc"
-             style="max-height: 849px; width: calc(100% + 17px);">
-            <div class="post-toc-content">
-                <ol class="nav">
-                    <li class="nav-item nav-level-2"><a class="nav-link"
-                                                        href="#"><span
-                            class="nav-number">1.</span> <span class="nav-text">数据持久化</span></a>
-                    </li>
-                    <li class="nav-item nav-level-2"><a class="nav-link"
-                                                        href="#"><span
-                            class="nav-number">2.</span> <span class="nav-text">refresh操作</span></a>
-                    </li>
-                    <li class="nav-item nav-level-2"><a class="nav-link"
-                                                        href="#"><span
-                            class="nav-number">3.</span> <span class="nav-text">flush操作</span></a>
-                    </li>
-                </ol>
-            </div>
-        </div>
-    </section>
-    <!--/noindex-->
+{% block sitebar %}
+    {% include 'blog/units/detail-sitebar.html' %}
 {% endblock %}
