--- a/blog/templates/blog/units/sidebar.html
+++ b/blog/templates/blog/units/sidebar.html
@@ -1,70 +1,71 @@
-{% block sidebar %}
-    <div class="sidebar-toggle">
-        <div class="sidebar-toggle-line-wrap">
+<div class="sidebar-toggle">
+    <div class="sidebar-toggle-line-wrap">
             <span class="sidebar-toggle-line sidebar-toggle-line-first"
                   style="width: 100%; top: 0px; transform: rotateZ(0deg); opacity: 1; left: 0px;"></span>
-            <span class="sidebar-toggle-line sidebar-toggle-line-middle"
-                  style="width: 100%; opacity: 1; left: 0px; top: 0px; transform: rotateZ(0deg);"></span>
-            <span class="sidebar-toggle-line sidebar-toggle-line-last"
-                  style="width: 100%; top: 0px; transform: rotateZ(0deg); opacity: 1; left: 0px;"></span>
-        </div>
+        <span class="sidebar-toggle-line sidebar-toggle-line-middle"
+              style="width: 100%; opacity: 1; left: 0px; top: 0px; transform: rotateZ(0deg);"></span>
+        <span class="sidebar-toggle-line sidebar-toggle-line-last"
+              style="width: 100%; top: 0px; transform: rotateZ(0deg); opacity: 1; left: 0px;"></span>
     </div>
-    <aside id="sidebar" class="sidebar">
-        <div class="sidebar-inner">
-            {% block blog_index_nav %}{% endblock %}
-            <section class="site-overview sidebar-panel sidebar-panel-active">
-                <div class="site-author motion-element">
-                    <img class="site-author-image"
-                         src="media/{{ blog_meta.owner.profile.avatar }}"/>
-                    <p class="site-author-name">{{ blog_meta.owner.username }}</p>
-                    <p class="site-description motion-element">{{ blog_meta.owner.profile.bio }}</p>
-                </div>
-                <nav class="site-state motion-element">
-                    <div class="site-state-item site-state-posts">
-                        <a href="#"> <span
-                                class="site-state-item-count">95</span> <span
+</div>
+<aside id="sidebar" class="sidebar">
+    <div class="sidebar-inner">
+        <section class="site-overview sidebar-panel sidebar-panel-active">
+            <div class="site-author motion-element">
+                <img class="site-author-image"
+                     src="{{ blog_meta.owner.profile.avatar.url }}"/>
+                <p class="site-author-name">{{ blog_meta.owner.username }}</p>
+                <p class="site-description motion-element">{{ blog_meta.owner.profile.bio }}</p>
+            </div>
+            <nav class="site-state motion-element">
+                <div class="site-state-item site-state-posts">
+                    <a href="{% url 'app:index' %}"> <span
+                            class="site-state-item-count">{{ article_count }}</span>
+                        <span
                                 class="site-state-item-name">日志</span> </a>
-                    </div>
-                    <div class="site-state-item site-state-categories">
-                        <a href="#"> <span
-                                class="site-state-item-count">30</span> <span
+                </div>
+                <div class="site-state-item site-state-categories">
+                    <a href="{% url 'app:categories' %}"> <span
+                            class="site-state-item-count">{{ category_count }}</span>
+                        <span
                                 class="site-state-item-name">分类</span> </a>
-                    </div>
-                    <div class="site-state-item site-state-tags">
-                        <a href="#"> <span
-                                class="site-state-item-count">103</span> <span
+                </div>
+                <div class="site-state-item site-state-tags">
+                    <a href="{% url 'app:tags' %}"> <span
+                            class="site-state-item-count">{{ tag_count }}</span>
+                        <span
                                 class="site-state-item-name">标签</span> </a>
-                    </div>
-                </nav>
-                <div class="links-of-author motion-element">
+                </div>
+            </nav>
+            <div class="links-of-author motion-element">
                     <span class="links-of-author-item"> <a
                             href="{{ blog_meta.owner.profile.github }}"
                             target="_blank" title="GitHub"> <i
                             class="fa fa-fw fa-github"></i> GitHub </a> </span>
-                    <span class="links-of-author-item"> <a href="{{ blog_meta.owner.profile.weibo }}"
-                                                           target="_blank"
-                                                           title="weibo"> <i
-                            class="fa fa-fw fa-weibo"></i> weibo </a> </span>
-                    <span class="links-of-author-item"> <a href="{{ blog_meta.owner.profile.zhihui }}"
-                                                           target="_blank"
-                                                           title="zhihu"> <i
-                            class="fa fa-fw fa-battery-3"></i> zhihu </a> </span>
+                <span class="links-of-author-item"> <a
+                        href="{{ blog_meta.owner.profile.weibo }}"
+                        target="_blank"
+                        title="weibo"> <i
+                        class="fa fa-fw fa-weibo"></i> weibo </a> </span>
+                <span class="links-of-author-item"> <a
+                        href="{{ blog_meta.owner.profile.zhihui }}"
+                        target="_blank"
+                        title="zhihu"> <i
+                        class="fa fa-fw fa-battery-3"></i> zhihu </a> </span>
+            </div>
+            <div class="links-of-blogroll motion-element links-of-blogroll-inline">
+                <div class="links-of-blogroll-title">
+                    <i class="fa fa-fw fa-globe"></i> 友情链接
                 </div>
-                <div class="links-of-blogroll motion-element links-of-blogroll-inline">
-                    <div class="links-of-blogroll-title">
-                        <i class="fa fa-fw fa-globe"></i> 友情链接
-                    </div>
-                    <ul class="links-of-blogroll-list">
-                        <li class="links-of-blogroll-item"><a
-                                href="https://www.ezlippi.com/" title="Qisen Tang"
-                                target="_blank">Ezlippi</a></li>
-                        <li class="links-of-blogroll-item"><a
-                                href="#"
-                                title="友链出租" target="_blank">友链出租</a></li>
-                    </ul>
-                </div>
-            </section>
-            {% block blog_index_content %}{% endblock %}
-        </div>
-    </aside>
-{% endblock %}
+                <ul class="links-of-blogroll-list">
+                    <li class="links-of-blogroll-item"><a
+                            href="https://www.ezlippi.com/"
+                            target="_blank">Ezlippi</a></li>
+                    <li class="links-of-blogroll-item"><a
+                            href="#"
+                            title="友链出租" target="_blank">友链出租</a></li>
+                </ul>
+            </div>
+        </section>
+    </div>
+</aside>
