--- a/blog/templates/blog/units/sidebar.html
+++ b/blog/templates/blog/units/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar-toggle">
     <div class="sidebar-toggle-line-wrap">
-            <span class="sidebar-toggle-line sidebar-toggle-line-first"
-                  style="width: 100%; top: 0px; transform: rotateZ(0deg); opacity: 1; left: 0px;"></span>
+        <span class="sidebar-toggle-line sidebar-toggle-line-first"
+              style="width: 100%; top: 0px; transform: rotateZ(0deg); opacity: 1; left: 0px;"></span>
         <span class="sidebar-toggle-line sidebar-toggle-line-middle"
               style="width: 100%; opacity: 1; left: 0px; top: 0px; transform: rotateZ(0deg);"></span>
         <span class="sidebar-toggle-line sidebar-toggle-line-last"
@@ -38,32 +38,33 @@
                 </div>
             </nav>
             <div class="links-of-author motion-element">
-                    <span class="links-of-author-item"> <a
-                            href="{{ blog_meta.owner.profile.github }}"
-                            target="_blank" title="GitHub"> <i
-                            class="fa fa-fw fa-github"></i> GitHub </a> </span>
-                <span class="links-of-author-item"> <a
-                        href="{{ blog_meta.owner.profile.weibo }}"
-                        target="_blank"
-                        title="weibo"> <i
-                        class="fa fa-fw fa-weibo"></i> weibo </a> </span>
-                <span class="links-of-author-item"> <a
-                        href="{{ blog_meta.owner.profile.zhihui }}"
-                        target="_blank"
-                        title="zhihu"> <i
-                        class="fa fa-fw fa-battery-3"></i> zhihu </a> </span>
+                {% for link in private_links %}
+                    <span class="links-of-author-item">
+                        <a href="{{ link.url }}" target="_blank">
+                            {% if link.icon %}
+                                <i class="fa fa-fw fa-{{ link.icon.value }}"></i>
+                            {% else %}
+                                <i class="fa fa-fw fa-battery-3"></i>
+                            {% endif %}
+                            {{ link.display }}
+                        </a>
+                    </span>
+                {% endfor %}
             </div>
             <div class="links-of-blogroll motion-element links-of-blogroll-inline">
                 <div class="links-of-blogroll-title">
                     <i class="fa fa-fw fa-globe"></i> 友情链接
                 </div>
                 <ul class="links-of-blogroll-list">
-                    <li class="links-of-blogroll-item"><a
-                            href="https://www.ezlippi.com/"
-                            target="_blank">Ezlippi</a></li>
-                    <li class="links-of-blogroll-item"><a
-                            href="#"
-                            title="友链出租" target="_blank">友链出租</a></li>
+                    {% for link in friendly_links %}
+                        <li class="links-of-blogroll-item"><a
+                                href="{{ link.url }}"
+                                target="_blank">{{ link.display }}</a></li>
+                        {% empty %}
+                            <li class="links-of-blogroll-item"><a
+                                href="#"
+                                target="_blank">友链出租</a></li>
+                    {% endfor %}
                 </ul>
             </div>
         </section>
